# financial-data-pipeline

./: .gitignore  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml
src/financial_data_pipeline/: pipeline_registry.py
src/financial_data_pipeline/pipelines/bigquery_load/: pipeline.py
src/financial_data_pipeline/pipelines/data_ingestion/: nodes.py  pipeline.py
src/financial_data_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
src/financial_data_pipeline/pipelines/feature_engineering/: nodes.py  pipeline.py
src/financial_data_pipeline/pipelines/star_schema/: nodes.py
tests/: conftest.py
tests/pipelines/: test_bigquery_load.py  test_data_processing.py  test_feature_engineering.py  test_star_schema.py
