[project]
name = "financial-data-pipeline"
version = "0.1.0"
description = "Production-grade financial data pipeline: Kedro + GCP + star schema."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=82.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_data_pipeline"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "BLE", "C4", "SIM"]
ignore = ["N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.kedro]
package_name = "financial_data_pipeline"
project_name = "financial-data-pipeline"
kedro_init_version = "1.3.1"
source_dir = "src"
[tool.kedro_telemetry]
project_id = "dee52c0c45cc464d984a85c335f333ae"
